add_executable(rrt test_rrt.cc)
add_executable(rrt_spreading test_rrt_spreading.cc)

add_executable(aorrt test_aorrt.cc)
add_executable(aorrt_spreading test_aorrt_spreading.cc)

add_executable(rcs test_rcs.cc)
add_executable(rcs_spreading test_rcs_spreading.cc)

add_executable(rcs_star test_rcs_star.cc)